# im2col

./: .gitignore  CMakeLists.txt  README.md
cmake/: findMATLAB.cmake
include/hemi/: hemi.h
matlab/: col2imstep.mexw64  im2colstep.mexw64  test_col2im.m  test_im2col.m
src/cu_col2im/: col2im.cu
src/cu_im2col/: im2col.cu
